# ELFIO

./: CMakeLists.txt  conanfile.py
ELFIOTest/: CMakeLists.txt
cmake/: elfio-config.cmake.in  forceOutOfSourceBuild.cmake
examples/: CMakeLists.txt
